--- a/style.css
+++ b/style.css
@@ -1,176 +1,198 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#header{
-    width:100%;
-    height:50px;
-    background-color:black;
+#header {
+    width: 100%;
+    height: 50px;
+    background-color: black;
 }
 
-.nav{
-    display:inline-block;
+.nav {
+    display: inline-block;
 }
 
-.nav>li{
-    display:inline-block;
+.nav>li {
+    display: inline-block;
 }
 
-.nav>li>a{
-    color:white;
+.nav>li>a {
+    color: white;
 }
 
-.nav>li:hover>a{
-    color:black;
+.nav>li:hover>a {
+    color: black;
     background-color: #ccc;
     display: block;
     transition: 0.4s;
 }
 
-li a{
-    text-decoration:none;
-    padding:0 25px;
-    line-height:50px;
-    
+li a {
+    text-decoration: none;
+    padding: 0 25px;
+    line-height: 50px;
+
 }
 
-.subnav{
-    display:none;
-    position:relative;
+.subnav {
+    display: none;
+    position: relative;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
 }
 
-.subnav li{
+.subnav li {
     list-style-type: none;
 }
 
-.subnav li a{
-    color:black;
+.subnav li a {
+    color: black;
 }
 
-.nav li:hover .subnav{
-    display:block;
-    position:absolute;
+.nav li:hover .subnav {
+    display: block;
+    position: absolute;
 }
 
-.subnav li:hover{
-    background-color:#ccc;
+.subnav li:hover {
+    background-color: #ccc;
     transition: 0.4s;
 }
 
-.search-btn{
-    float:right;
-    font-size: 20px;  
-    padding-right:30px;
-    padding-left:30px;
-    line-height:50px;
+.search-btn {
+    float: right;
+    font-size: 20px;
+    padding-right: 30px;
+    padding-left: 30px;
+    line-height: 50px;
 }
 
-.search-btn:hover{
+.search-btn:hover {
     background-color: red;
     cursor: pointer;
 }
 
-.search-icon{
-    color:white;
+.search-icon {
+    color: white;
 }
 
-#slide{
-    width:100%;
-    height:500px;
+#slide {
+    width: 100%;
+    height: 500px;
 }
 
-#main{
+#main {
     display: grid;
     grid-template-columns: 7fr 3fr;
     grid-template-rows: 1000px;
-    grid-gap:20px;
-    margin:40px 20px;
- 
+    grid-gap: 20px;
+    margin: 40px 20px;
+
 }
 
-.left{
-    display:grid;
+/* .left,
+.right {
+    border: 1px solid;
+} */
+
+.left {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 300px 300px 300px;
-    grid-gap:15px;
+    grid-gap: 15px;
 }
 
-.item-list{
+.item-list {
     background-color: #99FFCC;
-    border:1px solid #f1f1f1;
+    border: 1px solid #f1f1f1;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.item-list:hover{
+.item-list:hover {
     opacity: 0.9;
     transition: 0.4s;
 }
-.content{
+
+.content {
     text-align: center;
-    padding-top:7px;
+    padding-top: 7px;
     font-weight: bold;
-    color:#334862;
+    color: #334862;
 }
 
-.price{
+.price {
     text-align: center;
 }
 
-.right{
-    display:grid;
+.right {
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 40px 350px 520px;
-    grid-gap:10px;
+    grid-template-rows: 40px 350px 520px 30px;
+    grid-gap: 10px;
 }
 
-.right-item{
+.right-item {
     background-color: aquamarine;
-    border-radius: 15px;
-    
+    border-radius: 15px;   
 }
 
-.right-item:hover{
+.right-item:hover {
     opacity: 0.8;
     transition: 0.5s;
 }
 
-.right-item:first-child{
+.right-item:first-child {
     grid-column: 1/3;
     text-align: center;
     font-size: 30px;
     border-radius: 50px;
     background-color: pink;
-    box-shadow:0 10px 10px rgba(0 , 0, 0, 0.5);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
 }
-.right-item:nth-child(4){
+
+.right-item:nth-child(4) {
     grid-column: 1/3;
-   
 }
 
- #footer{
-     width:100%;
-     height:50px;
-     background-color: #F4A460;
- }
+.right-item:nth-child(5){
+    grid-column: 1/3;
+    margin:0 120px;
+    line-height:30px;    
+    background-color: #FF9900;
+    text-align:center;
+}
 
- #footer ul li{
-     display:inline-block;
-    
- }
+.last-one a{
+    color:white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.4s;    
+}
 
- .bot-icon{
-     text-align: center;
-     font-size: 20px;
-        
- }
+.last-one a:hover{
+    color:black;   
+}
 
-.icon-list{
-    color:black;
+#footer {
+    width: 100%;
+    height: 50px;
+    background-color: #F4A460;
+}
+
+#footer ul li {
+    display: inline-block;
+}
+
+.bot-icon {
+    text-align: center;
+}
+
+.icon-list {
+    color: black;
+    font-size: 20px;
 }
