--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@
     width: 100%;
     height: 50px;
     background-color: black;
+    position:fixed;
 }
 
 .nav {
     display: inline-block;
+    
 }
 
 .nav>li {
@@ -69,7 +71,7 @@ li a {
     padding-right: 30px;
     padding-left: 30px;
     line-height: 50px;
-    transition: 0.4s;
+    transition: 0.2s;
 }
 
 .search-btn:hover {
